2008-08-26  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_size_request): Fixed problem with
	pannable-area size_request.

2008-08-26  Alejandro G. Castro	 <alex@igalia.com>

	Added management for the grab-focus to a child widget, like a
	range, we need to fade out the scrollbar when releasing.

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_init): Connected the grab-focus signal to
	the callback.
	(hildon_pannable_area_grab_notify): Added this function in order
	to manage the situation when the grab-focus ends. We have to
	fade-out the scrollbar.

2008-08-25  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c: Minor documentation update.

2008-08-25  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu.c
	* examples/hildon-app-menu-example.c (create_menu): Update
	examples and documentation to explain how to connect callbacks.

2008-08-25  Alejandro Pinheiro <apinheiro@igalia.com>

	* examples/hildon-button-example.c
	(vertical_buttons_window) (horizontal_buttons_window) (main): use of
	hildon_stackable_window_new instead of gtk_window_new

2008-08-22  Alejandro G. Castro	 <alex@igalia.com>

	* src/hildon-pannable-area.c (hildon_pannable_area_class_init),
	(hildon_pannable_area_init), (hildon_pannable_area_get_property),
	(hildon_pannable_area_set_property),
	(hildon_pannable_area_dispose), (hildon_pannable_area_realize),
	(hildon_pannable_area_unrealize),
	(hildon_pannable_area_size_request),
	(hildon_pannable_area_size_allocate),
	(hildon_pannable_area_style_set), (hildon_pannable_area_map),
	(hildon_pannable_area_unmap), (rgb_from_gdkcolor),
	(hildon_pannable_draw_vscroll), (hildon_pannable_draw_hscroll),
	(hildon_pannable_area_initial_effect),
	(hildon_pannable_area_redraw),
	(hildon_pannable_area_scroll_indicator_fade),
	(hildon_pannable_area_expose_event),
	(hildon_pannable_area_get_topmost), (synth_crossing),
	(hildon_pannable_area_button_press_cb),